--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "ccxt": "^4.5.29",
     "dotenv": "^17.2.3",
+    "node-telegram-bot-api": "^0.63.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "technicalindicators": "^3.1.0",
     "ws": "^8.18.3"
   }
 }
