--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "ccxt": "^4.5.29",
     "dotenv": "^17.2.3",
     "node-telegram-bot-api": "^0.63.0",
